{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "c30f1cc3-c32a-4e0a-ad92-194d3edeb18a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "b4497487-7b7c-47ff-9fbe-0d9d9ad2c504",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "0b65211b-9647-4f01-9a58-7a67454901c3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7978155-b468-4bee-b356-624446cba96e",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c64ab7c8-f660-43cf-8dd3-f5df6f920e78",
                    "path": "<HID::Core (Plus) Wired Controller>/button7",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}